--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,30 @@
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
-
+  :root {
+    /* --bg: #151c2c; */
+    --bg: white;
+    --bgSoft: #182237;
+    --text: black;
+    --textSoft: #b7ac1f;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: var(--bg);
+    color: var(--text);
+  }
+  
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+  
   @layer base {
     :root {
       --background: 0 0% 100%;
